nginx/pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: mario21ic/nginx:alpine
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
