nginx/pod_configmap2.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod-cm-2
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
