nginx/pod_env.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-env
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
