nginx/pod_labels_prod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-labels-prod
  labels:
    release: stable
    environment: prod
    tier: backend
    region: us
spec:
  containers:
  - name: nginx
    image: mario21ic/nginx:alpine
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
