nginx/pod_liveness_readiness.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-liveness
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 3
    readinessProbe:
      httpGet:
        path: /
        port: 80
      periodSeconds: 2
      initialDelaySeconds: 0
      failureThreshold: 3
      successThreshold: 1
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
