nginx/pod_secret.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod-secret
spec:
  containers:
  - name: nginx
    image: nginx:alpine
