nginx/pod_secret_file.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod-secret-file
spec:
  volumes:
    - name: api-secret-volume
      secret:
        secretName: my-secret
  containers:
  - name: nginx
    image: nginx:alpine
    volumeMounts:
      - name: api-secret-volume
        mountPath: /etc/secret
