nginx/service.lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-lb-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
