nginx/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-np-svc
spec:
  #type: NodePort
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
